--- a/package.json
+++ b/package.json
@@ -6,13 +6,21 @@
   "author": "Vitor Pontual <vitorpguedes@me.com>",
   "license": "MIT",
   "scripts": {
-     "dev": "ts-node-dev --transpile-only --ignore-watch node_modules src/server.ts"
+    "dev": "ts-node-dev --transpile-only --ignore-watch node_modules src/server.ts",
+    "typeorm": "ts-node-dev node_modules/typeorm/cli.js"
   },
   "dependencies": {
-    "express": "^4.17.1"
+    "@types/express": "^4.17.11",
+    "add": "^2.0.6",
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
+    "pg": "^8.5.1",
+    "reflect-metadata": "^0.1.13",
+    "typeorm": "^0.2.31",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
-    "@types/express": "^4.17.11",
+    "@types/uuid": "^8.3.0",
     "ts-node-dev": "^1.1.1",
     "typescript": "^4.1.5"
   }
